# rules_python_poetry

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  defs.bzl  go.mod  go.sum
internal/: export.bzl  install.bzl  package.bzl  providers.bzl  publish.bzl  py_archive.bzl  pytest.bzl
internal/gazelle/: BUILD.bazel  config.go  fileinfo.go  fileinfo_test.go  generate.go  kinds.go  language.go  poetry.go  repo.go  resolve.go
internal/gazelle/stdlib/: BUILD.bazel  gen.py  stdlib.go
internal/gazelle/version/: BUILD.bazel  version.go
internal/pip_install/: BUILD  pip_repository.bzl
internal/pip_install/extract_wheels/: BUILD  __init__.py  __main__.py
internal/pip_install/extract_wheels/lib/: BUILD  bazel.py  namespace_pkgs.py  namespace_pkgs_test.py  purelib.py  requirements_bzl_test.py  requirements_test.py  whl_filegroup_test.py
internal/toolchain/: poetry_runner.py.tmpl  strip_dependencies.py.tmpl  toolchain.bzl
tests/gazelle/a_package/: BUILD.bazel  __init__.py
tests/gazelle/b_package/: BUILD.bazel
tests/gazelle/b_package/b2/: BUILD.bazel
tests/gazelle/b_package/b2/b3/: BUILD.bazel
tests/gazelle/c_namespace/: BUILD.bazel
tests/gazelle/d_namespace/: BUILD.bazel
tests/gazelle/main/: BUILD.bazel  __main__.py  foo.py
tests/gazelle/py_versions/latest/: BUILD.bazel  __init__.py
tests/gazelle/py_versions/py_36/: BUILD.bazel  __init__.py
tests/gazelle/tests/: BUILD.bazel
tests/gazelle/tests/module_mode/: BUILD.bazel
tests/gazelle/tests/package_mode/: BUILD.bazel
tests/multi/app/: BUILD.bazel  pyproject.toml
tests/multi/app/app/: __init__.py
tests/multi/app/tests/: test_app.py
tests/multi/liba/: BUILD.bazel  pyproject.toml
tests/multi/liba/liba/: __init__.py
tests/multi/liba/tests/: test_liba.py
tests/multi/libb/: BUILD.bazel  pyproject.toml
tests/multi/libb/libb/: __init__.py
tests/multi/libb/tests/: test_libb.py
tests/repo/: BUILD.bazel  pyproject.toml  repo.py  repo_test.py  repositories.bzl  update_repos.sh
tests/simple/: BUILD.bazel  pyproject.toml  simple.py  simple_test.py
