[tool.poetry]
name = "repo"
version = "0.1.0"
description = ""
authors = ["Martin Liu <martin.xs.liu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pendulum = "^2.1.2"
pytest = "^6.2.3"
pandas = "^1.2.3"
ipython = "^7.22.0"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
