[tool.poetry]
name = "simple"
version = "0.1.0"
description = ""
authors = ["Martin Liu <martin.xs.liu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
arrow = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
