load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@multi_app_deps//:requirements.bzl", "requirement")

py_library(
    name = "app",
    srcs = ["app/__init__.py"],
    data = ["pyproject.toml"],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "//tests/multi/liba",
        "@multi_app_requests//:py_library",
        "@multi_app_responses//:py_library",
        # @multi_app_requests is a py_archive rule which only includes the
        # package itself, so we have to manually include its dependencies.
        requirement("certifi"),
        requirement("chardet"),
        requirement("idna"),
        requirement("urllib3"),
    ],
)

py_test(
    name = "app_test",
    srcs = ["tests/test_app.py"],
    main = "tests/test_app.py",
    deps = [":app"],
)
