load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@multi_liba_deps//:requirements.bzl", "requirement")
load("//internal:package.bzl", "poetry_package")

py_library(
    name = "liba",
    srcs = ["liba/__init__.py"],
    data = ["pyproject.toml"],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "//tests/multi/libb",
        requirement("pendulum"),
    ],
)

py_test(
    name = "liba_test",
    srcs = ["tests/test_liba.py"],
    main = "tests/test_liba.py",
    deps = [":liba"],
)

poetry_package(
    name = "liba_package",
    poetry_lock = "poetry.lock",
    pyproject_toml = "pyproject.toml",
    deps = [":liba"],
)
