[tool.poetry]
name = "liba"
version = "0.1.0"
description = ""
authors = ["Martin Liu <martin.xs.liu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
libb = {path = "../libb", develop = false}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
