load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@multi_libb_deps//:requirements.bzl", "requirement")
load("//internal:package.bzl", "poetry_package")
load("//internal:publish.bzl", "poetry_publish")

py_library(
    name = "libb",
    srcs = ["libb/__init__.py"],
    data = ["pyproject.toml"],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [requirement("arrow")],
)

py_test(
    name = "libb_test",
    srcs = ["tests/test_libb.py"],
    main = "tests/test_libb.py",
    deps = [":libb"],
)

poetry_package(
    name = "libb_package",
    poetry_lock = "poetry.lock",
    pyproject_toml = "pyproject.toml",
    deps = [":libb"],
)

poetry_publish(
    name = "libb_publish",
    package = ":libb_package",
)
