load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "b2",
    srcs = ["__init__.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "main",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = ["//visibility:public"],
    deps = [
        ":b2",
        "//tests/gazelle/b_package",
    ],
)
